Test SQL modes against all Tests (#3746)
Makes SQL Integration Tests be run against all the entire suite and not just custom tests.

Also fixes a lot of Bugs that were caught this way. Disables a lot of tests for Hana.

Co-authored-by: Jonas Arnhold <jonas.arnhold@bakdata.com>